# khiopsdriver-shared

./: LICENSE  README.md  handy_aliases.sh
integrationtests/: CMakeLists.txt  README.md  fixture_storage.hpp  lsan_suppressions.txt  plugin.hpp  returnval.hpp  test_basic.cpp  test_end_to_end.cpp  test_io.cpp  urls.hpp  utils.hpp
src/khiops_driver_common/: contrib.hpp  logging.cpp  logging.hpp  util.hpp
